2021/08/05 v104
	1. Fix the warrior can't swap the main action bar in classic client.
	2. OnNodeRightClick event is added to the TreeView, ToggleTreeNode is added to the TreeView.


2021/07/21 v103
	1. make the cooldown of action button's hideCountdownNumbers default to false.

2021/07/17 v102
	1. Improve the support to RotateDegree.
	2. The PredictionHealthBar now display based on its orientation.

2021/07/10 v100
	1. Add charge cooldown support to Scorpio.Action system.

2021/07/05 v099
	1. Wow.UnitHealthLost, Wow.UnitHealthLostFrequent, Wow.UnitHealthLostPercentFrequent API added for unit frames.

2021/06/30 v096
	1. Fix the spell alert not hide.
	2. Add support to LibHealComm-4.0, so when you install the lib, you can enjoy the incoming health in classic.
	3. Fix action handler error for the classic version.

2021/06/25 v086
	1. The SecureActionButton System done, with the reactive style system.

2021/01/11 v059
	1. The UnitFrame System is finished and the Reactive For Style System is already done.

2020/11/20 v057
	1. Fix the code editor with "|".

2020/11/19 v056
	1. The code editor support UTF-8 now.

2020/10/22 v55
	1. The CodeEditor is improved, undo/redo is now all functional.

2020/07/12 v38
	1. The `__AsyncSingle__` can works for the class method and static method, for object method, each object can only have one coroutine running for the same method, for static method, for all objects, only on running coroutine is allowed.

2020/07/06 v37
	1. Fix some bugs in the child property and style system.
	2. Add override for the ui style properties, so the 'setAllPoints = true' settings will override the 'location' settings, they won't both work, that would cause conflict.
	3. __AsyncSingle__ attribute added for functions and methods, so the async function can only have one coroutine running at the same time.

2020/05/05 v36
	1. The Scorpio.UI & Scorpio.Widget Lib are finished.

2019/07/31
	1. Style Class system is fixed to support changes.

2019/07/30