@@ -1,3 +1,6 @@
+2021/08/05 v105
+	1. ActiveTreeNode and ClearTreeNodes is added to the TreeView.
+
 2021/08/05 v104
 	1. Fix the warrior can't swap the main action bar in classic client.
 	2. OnNodeRightClick event is added to the TreeView, ToggleTreeNode is added to the TreeView.
